[package]
name = "skia_test"
version = "0.1.0"
edition = "2021"
rust-version = "1.73"
repository = "https://github.com/ii887522/skia_test"
license = "MIT"
publish = false

[package.metadata.vcpkg]
dependencies = ["sdl2"]
git = "https://github.com/microsoft/vcpkg"
rev = "9f03078bdcbab3ad8c1e3927c40c3fb48e42501f"

[package.metadata.vcpkg.target]
x86_64-pc-windows-msvc = { triplet = "x64-windows-static-md" }

[profile.release]
strip = "debuginfo"
lto = "fat"
panic = "abort"
codegen-units = 1

[dependencies.skia-safe]
version = "0.68.0"
features = ["gl"]

[dependencies.sdl2]
version = "0.35.2"
default-features = false
features = ["static-link","use-vcpkg"]
